# liquidity-bot-basic

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  FINAL_AUDIT_COMPLETE.md  PRODUCTION_READY.md  README.md  SECURITY.md  db_migration.sql  pyproject.toml  sitecustomize.py  temp_config_testcase.toml
config/: app.example.toml  app.toml
docs/: agents.md  dashboard.md  migration-notes.md  references.md
docs/samples/: event_log.json  metrics_snapshot.json
node_bridge/: build_damm_transaction.mjs  build_damm_withdraw.mjs  build_dlmm_transaction.mjs  build_dlmm_withdraw.mjs  package-lock.json  package.json
pytest_xprocess/: __init__.py
scripts/: run_tests.sh  seed_position.py  soak_test.py
src/solana_liquidity_bot/: main.py
src/solana_liquidity_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/solana_liquidity_bot/analysis/: features.py  scoring.py
src/solana_liquidity_bot/analytics/: __init__.py  pnl.py
src/solana_liquidity_bot/config/: settings.py
src/solana_liquidity_bot/dashboard/: __init__.py  __main__.py  app.py  state.py  utils.py
src/solana_liquidity_bot/datalake/: schemas.py  storage.py
src/solana_liquidity_bot/execution/: node_bridge.py  router.py  solana_client.py  solana_compat.py  transaction_builder.py  transaction_queue.py  wallet.py
src/solana_liquidity_bot/ingestion/: axiom_api.py  compliance.py  damm_api.py  dlmm_api.py  event_listener.py  launch_filters.py  onchain.py  pricing.py  pumpfun_api.py  rocketscan_api.py  solana_token_list.py  token_controls.py  token_registry.py
(+37 files in other folders)
