[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-liquidity-bot"
version = "0.1.0"
description = "Framework and reference implementation of a Solana early-coin liquidity bot leveraging DAMM v2."
authors = [
  {name = "OpenAI Demo"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "requests==2.31.0",
  "pydantic==2.6.4",
  "pydantic-settings==2.1.0",
  "python-dotenv==1.0.1",
  "cachetools==5.3.3",
  "tenacity==8.2.3",
  "aiohttp==3.9.3",
  "pandas==2.1.4",
  "solana==0.34.0",
  "construct==2.10.68",
  "base58==2.1.1",
  "fastapi==0.109.2",
  "uvicorn==0.27.1"
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "pytest-asyncio==0.23.5",
  "black==23.12.1",
  "ruff==0.1.15"
]

[project.urls]
"Homepage" = "https://github.com/openai"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -p no:anchorpy.pytest_plugin"
testpaths = ["src/solana_liquidity_bot/tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E203", "E501"]
line-length = 100
